[gd_scene load_steps=26 format=3 uid="uid://c6lgf0aif4lh3"]

[ext_resource type="Texture2D" uid="uid://dwwredne3iomt" path="res://tilemap_packed.png" id="1_q8c42"]
[ext_resource type="Script" path="res://StageLoadVariables.gd" id="1_xekes"]
[ext_resource type="Texture2D" uid="uid://dhugkulgowtcu" path="res://PixelWoods/Waterfall/waterfalls.png" id="2_4abrq"]
[ext_resource type="Script" path="res://Player.gd" id="2_36h70"]
[ext_resource type="Texture2D" uid="uid://c4fab7j2ewuvp" path="res://PixelWoods/Seasons/spring/terrain tiles.png" id="2_bxtvg"]
[ext_resource type="PackedScene" uid="uid://6ukkmgv2y10s" path="res://items/wateritem/wateritem.tscn" id="3_rige4"]
[ext_resource type="PackedScene" uid="uid://d0jnw1k70lnqw" path="res://items/terrain/hole.tscn" id="4_olk5l"]
[ext_resource type="PackedScene" uid="uid://dxrwdgsg4fsci" path="res://items/balloon/balloon.tscn" id="5_1qua0"]
[ext_resource type="PackedScene" path="res://clownwoman.tscn" id="6_0d6lv"]
[ext_resource type="Texture2D" uid="uid://3haqiarjeks3" path="res://Menu Assets/HUD.png" id="10_4t2xu"]
[ext_resource type="FontFile" uid="uid://dk181dkmf3uki" path="res://Menu Assets/Namecat.ttf" id="11_qabwx"]
[ext_resource type="Script" path="res://testing/labeltestui.gd" id="12_wwdx1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lwydq"]
texture = ExtResource("1_q8c42")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
0:1/0/custom_data_0 = true
0:1/0/custom_data_7 = true
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
5:2/0/custom_data_0 = true
5:2/0/custom_data_4 = true
6:2/0 = 0
6:2/0/custom_data_0 = true
7:2/0 = 0
8:2/0 = 0
8:2/0/custom_data_0 = true
8:2/0/custom_data_5 = true
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
5:3/0/custom_data_0 = true
5:3/0/custom_data_6 = true
6:3/0 = 0
6:3/0/custom_data_0 = true
6:3/0/custom_data_1 = true
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
0:4/0/custom_data_0 = true
1:4/0 = 0
1:4/0/custom_data_0 = true
2:4/0 = 0
2:4/0/custom_data_0 = true
3:4/0 = 0
3:4/0/custom_data_0 = true
4:4/0 = 0
4:4/0/custom_data_0 = true
5:4/0 = 0
5:4/0/custom_data_0 = true
6:4/0 = 0
6:4/0/custom_data_0 = true
6:4/0/custom_data_3 = true
7:4/0 = 0
7:4/0/custom_data_0 = true
7:4/0/custom_data_3 = true
8:4/0 = 0
8:4/0/custom_data_0 = true
8:4/0/custom_data_3 = true
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
2:5/0/custom_data_0 = true
2:5/0/custom_data_2 = true
3:5/0 = 0
3:5/0/custom_data_0 = true
3:5/0/custom_data_8 = true
4:5/0 = 0
4:5/0/custom_data_0 = true
4:5/0/custom_data_8 = true
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
8:9/0/custom_data_0 = true
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hbfx2"]
texture = ExtResource("2_4abrq")
2:2/0 = 0
3:2/0 = 0
3:2/0/custom_data_0 = true
3:2/0/custom_data_1 = true
4:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
13:2/0 = 0
14:2/0 = 0
14:2/0/custom_data_1 = true
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
2:3/0 = 0
3:3/0 = 0
3:3/0/custom_data_0 = true
3:3/0/custom_data_1 = true
4:3/0 = 0
6:3/0 = 0
7:3/0 = 0
7:3/0/custom_data_0 = true
7:3/0/custom_data_1 = true
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
13:3/0 = 0
14:3/0 = 0
14:3/0/custom_data_1 = true
15:3/0 = 0
17:3/0 = 0
18:3/0 = 0
18:3/0/custom_data_1 = true
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
2:4/0 = 0
3:4/0 = 0
3:4/0/custom_data_0 = true
3:4/0/custom_data_1 = true
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
13:4/0 = 0
14:4/0 = 0
14:4/0/custom_data_1 = true
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
2:5/0 = 0
3:5/0 = 0
3:5/0/custom_data_0 = true
3:5/0/custom_data_1 = true
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
13:5/0 = 0
14:5/0 = 0
14:5/0/custom_data_1 = true
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
2:6/0 = 0
3:6/0 = 0
3:6/0/custom_data_0 = true
3:6/0/custom_data_1 = true
4:6/0 = 0
6:6/0 = 0
7:6/0 = 0
7:6/0/custom_data_0 = true
7:6/0/custom_data_1 = true
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
13:6/0 = 0
14:6/0 = 0
14:6/0/custom_data_1 = true
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
18:6/0/custom_data_1 = true
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
2:7/0 = 0
3:7/0 = 0
3:7/0/custom_data_0 = true
3:7/0/custom_data_1 = true
4:7/0 = 0
6:7/0 = 0
7:7/0 = 0
7:7/0/custom_data_0 = true
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
13:7/0 = 0
14:7/0 = 0
14:7/0/custom_data_1 = true
15:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
6:9/0 = 0
7:9/0 = 0
7:9/0/custom_data_0 = true
7:9/0/custom_data_1 = true
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
17:9/0 = 0
18:9/0 = 0
18:9/0/custom_data_1 = true
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vw4fr"]
texture = ExtResource("2_bxtvg")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
1:1/0 = 0
2:1/0 = 0
2:1/0/custom_data_0 = true
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
10:1/0 = 0
10:1/0/custom_data_0 = true
11:1/0 = 0
11:1/0/custom_data_0 = true
12:1/0 = 0
12:1/0/custom_data_0 = true
13:1/0 = 0
13:1/0/custom_data_0 = true
14:1/0 = 0
14:1/0/custom_data_0 = true
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
7:2/0 = 0
7:2/0/custom_data_0 = true
8:2/0 = 0
8:2/0/custom_data_0 = true
10:2/0 = 0
10:2/0/custom_data_0 = true
11:2/0 = 0
11:2/0/custom_data_0 = true
12:2/0 = 0
12:2/0/custom_data_0 = true
13:2/0 = 0
13:2/0/custom_data_0 = true
14:2/0 = 0
14:2/0/custom_data_0 = true
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
7:3/0 = 0
7:3/0/custom_data_0 = true
8:3/0 = 0
8:3/0/custom_data_0 = true
10:3/0 = 0
10:3/0/custom_data_0 = true
11:3/0 = 0
11:3/0/custom_data_0 = true
12:3/0 = 0
12:3/0/custom_data_0 = true
13:3/0 = 0
13:3/0/custom_data_0 = true
14:3/0 = 0
14:3/0/custom_data_0 = true
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
7:4/0 = 0
7:4/0/custom_data_0 = true
8:4/0 = 0
8:4/0/custom_data_0 = true
10:4/0 = 0
11:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
10:5/0 = 0
11:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
1:7/0 = 0
2:7/0 = 0
2:7/0/custom_data_0 = true
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
7:8/0 = 0
7:8/0/custom_data_0 = true
8:8/0 = 0
8:8/0/custom_data_0 = true
10:8/0 = 0
10:8/0/custom_data_0 = true
11:8/0 = 0
11:8/0/custom_data_0 = true
12:8/0 = 0
12:8/0/custom_data_0 = true
13:8/0 = 0
13:8/0/custom_data_0 = true
14:8/0 = 0
14:8/0/custom_data_0 = true
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
7:9/0 = 0
7:9/0/custom_data_0 = true
8:9/0 = 0
8:9/0/custom_data_0 = true
10:9/0 = 0
10:9/0/custom_data_0 = true
11:9/0 = 0
11:9/0/custom_data_0 = true
12:9/0 = 0
12:9/0/custom_data_0 = true
13:9/0 = 0
13:9/0/custom_data_0 = true
14:9/0 = 0
14:9/0/custom_data_0 = true
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
7:10/0 = 0
7:10/0/custom_data_0 = true
8:10/0 = 0
8:10/0/custom_data_0 = true
10:10/0 = 0
10:10/0/custom_data_0 = true
11:10/0 = 0
11:10/0/custom_data_0 = true
12:10/0 = 0
12:10/0/custom_data_0 = true
13:10/0 = 0
13:10/0/custom_data_0 = true
14:10/0 = 0
14:10/0/custom_data_0 = true
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
16:11/0 = 0
17:11/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
10:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
16:12/0 = 0
17:12/0 = 0
2:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
16:13/0 = 0
17:13/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0

[sub_resource type="TileSet" id="TileSet_kbr4w"]
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "water"
custom_data_layer_1/type = 1
custom_data_layer_2/name = "ice"
custom_data_layer_2/type = 1
custom_data_layer_3/name = "hole"
custom_data_layer_3/type = 1
custom_data_layer_4/name = "fire"
custom_data_layer_4/type = 1
custom_data_layer_5/name = "lava"
custom_data_layer_5/type = 1
custom_data_layer_6/name = "spike"
custom_data_layer_6/type = 1
custom_data_layer_7/name = "cool"
custom_data_layer_7/type = 1
custom_data_layer_8/name = "clear"
custom_data_layer_8/type = 1
sources/0 = SubResource("TileSetAtlasSource_lwydq")
sources/2 = SubResource("TileSetAtlasSource_vw4fr")
sources/1 = SubResource("TileSetAtlasSource_hbfx2")

[sub_resource type="AtlasTexture" id="AtlasTexture_4um1o"]
atlas = ExtResource("1_q8c42")
region = Rect2(0, 80, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ri7y"]
size = Vector2(8.23405, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2igf"]
atlas = ExtResource("1_q8c42")
region = Rect2(48, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2bsf"]
atlas = ExtResource("1_q8c42")
region = Rect2(32, 160, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_udx71"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_osasf"]
atlas = ExtResource("1_q8c42")
region = Rect2(80, 144, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8wpt0"]
size = Vector2(16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_nlu6m"]
font = ExtResource("11_qabwx")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_tq25f"]
font = ExtResource("11_qabwx")
font_size = 40
font_color = Color(0.894118, 0.0980392, 0.317647, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_xekes")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_kbr4w")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 1, 0, 0, 65537, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 65536, 0, 262146, 65536, 1, 327682, 65536, 1, 393218, 65536, 1, 458754, 65536, 1, 524290, 65536, 1, 589826, 65536, 1, 655362, 65536, 1, 720898, 65536, 1, 786434, 65536, 1, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 131072, 0, 262147, 131072, 1, 327683, 131072, 4, 393219, 0, 4, 458755, 0, 4, 524291, 0, 4, 589827, 0, 4, 655363, 393216, 4, 720899, 393216, 4, 786435, 0, 4, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 131072, 0, 262148, 131072, 1, 327684, 131072, 4, 393220, 0, 4, 458756, 0, 4, 524292, 0, 4, 589828, 0, 4, 655364, 0, 4, 720900, 0, 4, 786436, 0, 4, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 131072, 0, 262149, 131072, 1, 327685, 131072, 4, 393221, 0, 4, 458757, 0, 4, 524293, 0, 4, 589829, 0, 4, 655365, 0, 4, 720901, 0, 4, 786437, 0, 4, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 131072, 0, 262150, 131072, 1, 327686, 131072, 4, 393222, 0, 4, 458758, 0, 4, 524294, 0, 4, 589830, 0, 4, 655366, 0, 4, 720902, 0, 4, 786438, 0, 4, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 131072, 0, 262151, 131072, 1, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 131072, 0, 262152, 131072, 1, 327688, 131072, 4, 393224, 0, 4, 458760, 0, 4, 524296, 0, 4, 589832, 0, 4, 655368, 0, 4, 720904, 0, 4, 786440, 0, 4, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 131072, 0, 262153, 131072, 1, 327689, 131072, 4, 393225, 0, 4, 458761, 0, 4, 524297, 0, 4, 589833, 0, 4, 655369, 0, 4, 720905, 0, 4, 786441, 0, 4, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 131072, 0, 262154, 131072, 1, 327690, 131072, 4, 393226, 0, 4, 458762, 0, 4, 524298, 0, 4, 589834, 327680, 3, 655370, 327680, 3, 720906, 327680, 3, 786442, 0, 4, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 131072, 0, 262155, 131072, 1, 327691, 131072, 4, 393227, 0, 4, 458763, 0, 4, 524299, 0, 4, 589835, 0, 4, 655371, 0, 4, 720907, 0, 4, 786443, 0, 4, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 131072, 0, 262156, 131072, 1, 327692, 131072, 4, 393228, 0, 4, 458764, 0, 4, 524300, 0, 4, 589836, 0, 4, 655372, 0, 4, 720908, 0, 4, 786444, 0, 4, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 131072, 0, 262157, 131072, 1, 327693, 131072, 4, 393229, 0, 4, 458765, 0, 4, 524301, 0, 4, 589837, 0, 4, 655373, 0, 4, 720909, 0, 4, 786445, 0, 4, 851967, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 0, 720895, 0, 0, 786431, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 131072, 0, 262158, 131072, 1, 327694, 131072, 4, 393230, 0, 4, 458766, 0, 4, 524302, 0, 4, 589838, 0, 4, 655374, 0, 4, 720910, 0, 4, 786446, 0, 4, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 131072, 0, 262159, 131072, 1, 327695, 131072, 4, 393231, 0, 4, 458767, 0, 4, 524303, 0, 4, 589839, 0, 4, 655375, 0, 4, 720911, 0, 4, 786447, 0, 4, -1, 0, 0, -65541, 0, 0, -5, 0, 0, 65531, 0, 0, 131067, 0, 0, 196603, 0, 0, 262139, 0, 0, 327675, 0, 0, 393211, 0, 0, 458747, 0, 0, 524283, 0, 0, 589819, 0, 0, 655355, 0, 0, 720891, 0, 0, 786427, 0, 0, 851963, 0, 0, 917499, 0, 0, 983035, 0, 0, -65540, 0, 0, -4, 0, 0, 65532, 0, 0, 131068, 0, 0, 196604, 0, 0, 262140, 0, 0, 327676, 0, 0, 393212, 0, 0, 458748, 0, 0, 524284, 0, 0, 589820, 0, 0, 655356, 0, 0, 720892, 0, 0, 786428, 0, 0, 851964, 0, 0, 917500, 0, 0, 983036, 0, 0, -65539, 0, 0, -3, 0, 0, 65533, 0, 0, 131069, 0, 0, 196605, 0, 0, 262141, 0, 0, 327677, 0, 0, 393213, 0, 0, 458749, 0, 0, 524285, 0, 0, 589821, 0, 0, 655357, 0, 0, 720893, 0, 0, 786429, 0, 0, 851965, 0, 0, 917501, 0, 0, 983037, 0, 0, -65538, 0, 0, -2, 0, 0, 65534, 0, 0, 131070, 0, 0, 196606, 0, 0, 262142, 0, 0, 327678, 0, 0, 393214, 0, 0, 458750, 0, 0, 524286, 0, 0, 589822, 0, 0, 655358, 0, 0, 720894, 0, 0, 786430, 0, 0, 851966, 0, 0, 917502, 0, 0, 983038, 0, 0, 917503, 0, 0, 983039, 0, 0, 851968, 0, 0, 917504, 0, 0, 851969, 0, 0, 917505, 0, 0, 851970, 65536, 1, 917506, 65536, 1, 851971, 0, 4, 917507, 327680, 2, 851972, 0, 4, 917508, 0, 4, 851973, 0, 4, 917509, 0, 4, 851974, 0, 4, 917510, 524288, 2, 851975, 0, 4, 917511, 0, 4, 851976, 0, 4, 917512, 0, 4, 851977, 0, 4, 917513, 0, 4, 851978, 0, 4, 917514, 0, 4, 851979, 0, 4, 917515, 0, 4, 851980, 0, 4, 917516, 0, 4, 851981, 196608, 5, 917517, 0, 4, 851982, 0, 4, 917518, 0, 4, 851983, 0, 4, 917519, 0, 4, 851984, 0, 4, 917520, 0, 4, 851985, 196608, 1, 917521, 196608, 1, 851986, 0, 0, 917522, 0, 0, -131056, 0, 0, -65520, 0, 0, 16, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 131072, 0, 262160, 131072, 1, 327696, 131072, 4, 393232, 0, 4, 458768, 0, 4, 524304, 0, 4, 589840, 0, 4, 655376, 0, 4, 720912, 0, 4, 786448, 0, 4, -131055, 0, 0, -65519, 0, 0, 17, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 196608, 0, 262161, 196608, 1, 327697, 196608, 1, 393233, 196608, 1, 458769, 196608, 1, 524305, 196608, 1, 589841, 196608, 1, 655377, 196608, 1, 720913, 196608, 1, 786449, 196608, 1, -131054, 0, 0, -65518, 0, 0, 18, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 0, 0, 655378, 0, 0, 720914, 0, 0, 786450, 0, 0, -131053, 0, 0, -65517, 0, 0, 19, 0, 0, 65555, 0, 0, 131091, 0, 0, 196627, 0, 0, 262163, 0, 0, 327699, 0, 0, 393235, 0, 0, 458771, 0, 0, 524307, 0, 0, 589843, 0, 0, 655379, 0, 0, 720915, 0, 0, 786451, 0, 0, 851987, 0, 0, 917523, 0, 0, -196613, 0, 0, -131077, 0, 0, -196612, 0, 0, -131076, 0, 0, -196611, 0, 0, -131075, 0, 0, -196610, 0, 0, -131074, 0, 0, -196609, 0, 0, -131073, 0, 0, -65537, 0, 0, -262144, 0, 0, -196608, 0, 0, -131072, 0, 0, -262143, 0, 0, -196607, 0, 0, -131071, 0, 0, -262142, 0, 0, -196606, 0, 0, -131070, 0, 0, -262141, 0, 0, -196605, 0, 0, -131069, 0, 0, -262140, 0, 0, -196604, 0, 0, -131068, 0, 0, -262139, 0, 0, -196603, 0, 0, -131067, 0, 0, -262138, 0, 0, -196602, 0, 0, -131066, 0, 0, -262137, 0, 0, -196601, 0, 0, -131065, 0, 0, -262136, 0, 0, -196600, 0, 0, -131064, 0, 0, -262135, 0, 0, -196599, 0, 0, -131063, 0, 0, -262134, 0, 0, -196598, 0, 0, -131062, 0, 0, -262133, 0, 0, -196597, 0, 0, -131061, 0, 0, -262132, 0, 0, -196596, 0, 0, -131060, 0, 0, -262131, 0, 0, -196595, 0, 0, -131059, 0, 0, -262130, 0, 0, -196594, 0, 0, -131058, 0, 0, -262129, 0, 0, -196593, 0, 0, -131057, 0, 0, -262128, 0, 0, -196592, 0, 0, -262127, 0, 0, -196591, 0, 0, -262126, 0, 0, -196590, 0, 0, -262125, 0, 0, -196589, 0, 0, 1048571, 0, 0, 1114107, 0, 0, 1048572, 0, 0, 1114108, 0, 0, 1048573, 0, 0, 1114109, 0, 0, 1048574, 0, 0, 1114110, 0, 0, 1048575, 0, 0, 1114111, 0, 0, 983040, 0, 0, 1048576, 0, 0, 983041, 0, 0, 1048577, 0, 0, 983042, 65536, 1, 1048578, 65536, 1, 983043, 327680, 2, 1048579, 0, 4, 983044, 0, 4, 1048580, 0, 4, 983045, 0, 4, 1048581, 0, 4, 983046, 524288, 2, 1048582, 0, 4, 983047, 0, 4, 1048583, 0, 4, 983048, 0, 4, 1048584, 0, 4, 983049, 0, 4, 1048585, 0, 4, 983050, 0, 4, 1048586, 0, 4, 983051, 0, 4, 1048587, 0, 4, 983052, 0, 4, 1048588, 0, 4, 983053, 0, 4, 1048589, 0, 4, 983054, 0, 4, 1048590, 0, 4, 983055, 0, 4, 1048591, 0, 4, 983056, 0, 4, 1048592, 0, 4, 983057, 196608, 1, 1048593, 196608, 1, 983058, 0, 0, 1048594, 0, 0, 983059, 0, 0, 1048595, 0, 0, 1179643, 0, 0, 1245179, 0, 0, 1310715, 0, 0, 1376251, 0, 0, 1441787, 0, 0, 1179644, 0, 0, 1245180, 0, 0, 1310716, 0, 0, 1376252, 0, 0, 1441788, 0, 0, 1179645, 0, 0, 1245181, 0, 0, 1310717, 0, 0, 1376253, 0, 0, 1441789, 0, 0, 1179646, 0, 0, 1245182, 0, 0, 1310718, 0, 0, 1376254, 0, 0, 1441790, 0, 0, 1179647, 0, 0, 1245183, 0, 0, 1310719, 0, 0, 1376255, 0, 0, 1441791, 0, 0, 1114112, 0, 0, 1179648, 0, 0, 1245184, 0, 0, 1310720, 0, 0, 1376256, 0, 0, 1114113, 0, 0, 1179649, 0, 0, 1245185, 0, 0, 1310721, 0, 0, 1376257, 0, 0, 1114114, 65536, 2, 1179650, 0, 0, 1245186, 0, 0, 1310722, 0, 0, 1376258, 0, 0, 1114115, 131072, 2, 1179651, 0, 0, 1245187, 0, 0, 1310723, 0, 0, 1376259, 0, 0, 1114116, 131072, 2, 1179652, 0, 0, 1245188, 0, 0, 1310724, 0, 0, 1376260, 0, 0, 1114117, 131072, 2, 1179653, 0, 0, 1245189, 0, 0, 1310725, 0, 0, 1376261, 0, 0, 1114118, 131072, 2, 1179654, 0, 0, 1245190, 0, 0, 1310726, 0, 0, 1376262, 0, 0, 1114119, 131072, 2, 1179655, 0, 0, 1245191, 0, 0, 1310727, 0, 0, 1376263, 0, 0, 1114120, 131072, 2, 1179656, 0, 0, 1245192, 0, 0, 1310728, 0, 0, 1376264, 0, 0, 1114121, 131072, 2, 1179657, 0, 0, 1245193, 0, 0, 1310729, 0, 0, 1376265, 0, 0, 1114122, 131072, 2, 1179658, 0, 0, 1245194, 0, 0, 1310730, 0, 0, 1376266, 0, 0, 1114123, 131072, 2, 1179659, 0, 0, 1245195, 0, 0, 1310731, 0, 0, 1376267, 0, 0, 1114124, 131072, 2, 1179660, 0, 0, 1245196, 0, 0, 1310732, 0, 0, 1376268, 0, 0, 1114125, 131072, 2, 1179661, 0, 0, 1245197, 0, 0, 1310733, 0, 0, 1376269, 0, 0, 1114126, 131072, 2, 1179662, 0, 0, 1245198, 0, 0, 1310734, 0, 0, 1376270, 0, 0, 1114127, 131072, 2, 1179663, 0, 0, 1245199, 0, 0, 1310735, 0, 0, 1376271, 0, 0, 1114128, 131072, 2, 1179664, 0, 0, 1245200, 0, 0, 1310736, 0, 0, 1376272, 0, 0, 1114129, 196608, 2, 1179665, 0, 0, 1245201, 0, 0, 1310737, 0, 0, 1376273, 0, 0, 1114130, 0, 0, 1179666, 0, 0, 1245202, 0, 0, 1310738, 0, 0, 1376274, 0, 0, 1114131, 0, 0, 1179667, 0, 0, 1245203, 0, 0, 1310739, 0, 0, 1376275, 0, 0, -262124, 0, 0, -196588, 0, 0, -131052, 0, 0, -65516, 0, 0, 20, 0, 0, 65556, 0, 0, 131092, 0, 0, 196628, 0, 0, 262164, 0, 0, 327700, 0, 0, 393236, 0, 0, 458772, 0, 0, 524308, 0, 0, 589844, 0, 0, 655380, 0, 0, 720916, 0, 0, 786452, 0, 0, 851988, 0, 0, 917524, 0, 0, 983060, 0, 0, 1048596, 0, 0, 1114132, 0, 0, 1179668, 0, 0, 1245204, 0, 0, 1310740, 0, 0, 1376276, 0, 0, -262123, 0, 0, -196587, 0, 0, -131051, 0, 0, -65515, 0, 0, 21, 0, 0, 65557, 0, 0, 131093, 0, 0, 196629, 0, 0, 262165, 0, 0, 327701, 0, 0, 393237, 0, 0, 458773, 0, 0, 524309, 0, 0, 589845, 0, 0, 655381, 0, 0, 720917, 0, 0, 786453, 0, 0, 851989, 0, 0, 917525, 0, 0, 983061, 0, 0, 1048597, 0, 0, 1114133, 0, 0, 1179669, 0, 0, 1245205, 0, 0, 1310741, 0, 0, 1376277, 0, 0, -262122, 0, 0, -196586, 0, 0, -131050, 0, 0, -65514, 0, 0, 22, 0, 0, 65558, 0, 0, 131094, 0, 0, 196630, 0, 0, 262166, 0, 0, 327702, 0, 0, 393238, 0, 0, 458774, 0, 0, 524310, 0, 0, 589846, 0, 0, 655382, 0, 0, 720918, 0, 0, 786454, 0, 0, 851990, 0, 0, 917526, 0, 0, 983062, 0, 0, 1048598, 0, 0, 1114134, 0, 0, 1179670, 0, 0, 1245206, 0, 0, 1310742, 0, 0, 1376278, 0, 0, -262121, 0, 0, -196585, 0, 0, -131049, 0, 0, -65513, 0, 0, 23, 0, 0, 65559, 0, 0, 131095, 0, 0, 196631, 0, 0, 262167, 0, 0, 327703, 0, 0, 393239, 0, 0, 458775, 0, 0, 524311, 0, 0, 589847, 0, 0, 655383, 0, 0, 720919, 0, 0, 786455, 0, 0, 851991, 0, 0, 917527, 0, 0, 983063, 0, 0, 1048599, 0, 0, 1114135, 0, 0, 1179671, 0, 0, 1245207, 0, 0, 1310743, 0, 0, 1376279, 0, 0, -262120, 0, 0, -196584, 0, 0, -131048, 0, 0, -65512, 0, 0, 24, 0, 0, 65560, 0, 0, 131096, 0, 0, 196632, 0, 0, 262168, 0, 0, 327704, 0, 0, 393240, 0, 0, 458776, 0, 0, 524312, 0, 0, 589848, 0, 0, 655384, 0, 0, 720920, 0, 0, 786456, 0, 0, 851992, 0, 0, 917528, 0, 0, 983064, 0, 0, 1048600, 0, 0, 1114136, 0, 0, 1179672, 0, 0, 1245208, 0, 0, 1310744, 0, 0, 1376280, 0, 0, -262119, 0, 0, -196583, 0, 0, -131047, 0, 0, -65511, 0, 0, 25, 0, 0, 65561, 0, 0, 131097, 0, 0, 196633, 0, 0, 262169, 0, 0, 327705, 0, 0, 393241, 0, 0, 458777, 0, 0, 524313, 0, 0, 589849, 0, 0, 655385, 0, 0, 720921, 0, 0, 786457, 0, 0, 851993, 0, 0, 917529, 0, 0, 983065, 0, 0, 1048601, 0, 0, 1114137, 0, 0, 1179673, 0, 0, 1245209, 0, 0, 1310745, 0, 0, 1376281, 0, 0, 327687, 196609, 2, 393223, 196609, 2, 458759, 196609, 2, 524295, 196609, 2, 589831, 196609, 2, 655367, 196609, 2, 720903, 196609, 2, 786439, 196609, 2, 458740, 393216, 4)

[node name="Player" type="Sprite2D" parent="." groups=["Player"]]
z_index = 3
position = Vector2(56, 88)
texture = SubResource("AtlasTexture_4um1o")
script = ExtResource("2_36h70")

[node name="Area2D" type="Area2D" parent="Player"]
scale = Vector2(1.6988, 1.54129)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2(-4.76837e-07, 9.53674e-07)
shape = SubResource("RectangleShape2D_5ri7y")

[node name="Ms_Clown" parent="Player" instance=ExtResource("6_0d6lv")]
position = Vector2(-3, 5)
scale = Vector2(0.028125, 0.028125)

[node name="Sprite2D" type="Sprite2D" parent="Player"]
visible = false
scale = Vector2(0.9375, 0.9375)
texture = SubResource("AtlasTexture_r2igf")

[node name="MoveCast" type="RayCast2D" parent="Player"]
target_position = Vector2(0, 16)
collide_with_areas = true

[node name="ObjCast" type="RayCast2D" parent="Player"]
modulate = Color(0.321569, 0.34902, 0, 1)
self_modulate = Color(0.380392, 0.117647, 0.254902, 1)
target_position = Vector2(0, 16)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="TerrainCast" type="RayCast2D" parent="Player"]
visible = false

[node name="Creature" type="Node2D" parent="."]
position = Vector2(169, 105)

[node name="Sprite2D" type="Sprite2D" parent="Creature"]
texture = SubResource("AtlasTexture_b2bsf")

[node name="Area2D" type="Area2D" parent="Creature"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Creature/Area2D"]
shape = SubResource("RectangleShape2D_udx71")

[node name="hole" parent="." groups=["hole"] instance=ExtResource("4_olk5l")]
z_index = 1
position = Vector2(56, 136)
collision_layer = 2
collision_mask = 2

[node name="Wateritem" parent="." groups=["water_item"] instance=ExtResource("3_rige4")]
z_index = 2
position = Vector2(64, 128)

[node name="Balloon" parent="." groups=["float_item"] instance=ExtResource("5_1qua0")]
z_index = 2
position = Vector2(96, 128)
collision_layer = 2
collision_mask = 2

[node name="Iceitem" type="Area2D" parent="." groups=["iceitem"]]
position = Vector2(88, 136)
collision_layer = 2
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="Iceitem"]
texture = SubResource("AtlasTexture_osasf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Iceitem"]
shape = SubResource("RectangleShape2D_8wpt0")

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("12_wwdx1")

[node name="MainCam" type="Camera2D" parent="Node2D"]
position = Vector2(161, 155)
scale = Vector2(0.9375, 0.9375)
zoom = Vector2(2.3, 2.7)

[node name="UIImg" type="TextureRect" parent="Node2D/MainCam"]
offset_left = -267.0
offset_top = -128.0
offset_right = 267.0
offset_bottom = 128.0
texture = ExtResource("10_4t2xu")
expand_mode = 1

[node name="MovCount" type="Label" parent="Node2D/MainCam/UIImg"]
layout_mode = 0
offset_left = 22.7333
offset_top = 165.333
offset_right = 64.7333
offset_bottom = 235.333
rotation = -0.0843516
pivot_offset = Vector2(20.2667, 34.1333)
theme_override_fonts/font = ExtResource("11_qabwx")
label_settings = SubResource("LabelSettings_nlu6m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MovCount2" type="Label" parent="Node2D/MainCam/UIImg"]
layout_mode = 0
offset_left = 22.7333
offset_top = 165.333
offset_right = 64.7333
offset_bottom = 235.333
rotation = -0.0843516
pivot_offset = Vector2(20.2667, 34.1333)
theme_override_fonts/font = ExtResource("11_qabwx")
text = "99"
label_settings = SubResource("LabelSettings_tq25f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MovCount3" type="Label" parent="Node2D/MainCam/UIImg"]
layout_mode = 0
offset_left = 465.4
offset_top = 166.4
offset_right = 511.4
offset_bottom = 236.4
rotation = 0.088592
pivot_offset = Vector2(20.2667, 34.1333)
theme_override_fonts/font = ExtResource("11_qabwx")
text = "99"
label_settings = SubResource("LabelSettings_tq25f")
horizontal_alignment = 1
vertical_alignment = 1
